# nix-python-template

./: .env_vars.template  .envrc  .gitignore  LICENSE  README.org  flake.nix  pyproject.toml
myapp/: main.py  something.py
myapp/tests/: test_something.py
